# SQLAlchemy-query

./: README.md  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: f3c7b459483e_init.py
src/: config.ini  db.py  models.py
